--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,179 +19,197 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Header section -->
     <header>
-      <nav>
-        <a href="./index.html" class="company-name"
-          >Web<span class="company-name-part">Studio</span></a
-        >
-        <ul class="navigation">
-          <li><a href="./index.html" class="nav-items">Studio</a></li>
-          <li><a href="" class="nav-items">Portfolio</a></li>
-          <li><a href="" class="nav-items">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-item"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-item"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="company-name"
+            >Web<span class="company-name-part">Studio</span></a
+          >
+          <ul class="navigation">
+            <li><a href="./index.html" class="nav-items">Studio</a></li>
+            <li><a href="" class="nav-items">Portfolio</a></li>
+            <li><a href="" class="nav-items">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="section-first">
-        <h1 class="header">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+      <!-- Hero section -->
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-header">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
-      <section class="section2">
-        <h2 hidden>Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="advantages">Strategy</h3>
-            <p class="advantages-descrpt">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages">Punctuality</h3>
-            <p class="advantages-descrpt">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages">Diligence</h3>
-            <p class="advantages-descrpt">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages">Technologies</h3>
-            <p class="advantages-descrpt">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <!-- Advantages section -->
+      <section class="advantages section">
+        <div class="container">
+          <h2 hidden>Advantages</h2>
+          <ul>
+            <li>
+              <h3 class="advantages-header">Strategy</h3>
+              <p class="advantages-descrpt">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages">Punctuality</h3>
+              <p class="advantages-descrpt">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages">Diligence</h3>
+              <p class="advantages-descrpt">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages">Technologies</h3>
+              <p class="advantages-descrpt">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section-third">
-        <h2 class="team">Our Team</h2>
-        <ul>
-          <li class="team-members">
-            <img
-              src="./images/img.jpg"
-              width="264"
-              height="260"
-              alt="Picture of Employee 1" />
-            <h3 class="advantages">Mark Guerrero</h3>
-            <p class="advantages-descrpt">Product Designer</p>
-          </li>
-          <li class="team-members">
-            <img
-              src="./images/img1.jpg"
-              width="264"
-              height="260"
-              alt="Picture of Employee 2" />
-            <h3 class="advantages">Tom Ford</h3>
-            <p class="advantages-descrpt">Frontend Developer</p>
-          </li>
-          <li class="team-members">
-            <img
-              src="./images/img2.jpg"
-              width="264"
-              height="260"
-              alt="Picture of Employee 3" />
-            <h3 class="advantages">Camila Garcia</h3>
-            <p class="advantages-descrpt">Marketing</p>
-          </li>
-          <li class="team-members">
-            <img
-              src="./images/img3.jpg"
-              width="264"
-              height="260"
-              alt="Picture of Employee 4" />
-            <h3 class="advantages">Daniel Wilson</h3>
-            <p class="advantages-descrpt">UI Designer</p>
-          </li>
-        </ul>
+      <!-- Team section -->
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-header">Our Team</h2>
+          <ul>
+            <li class="team-members">
+              <img
+                src="./images/img.jpg"
+                width="264"
+                height="260"
+                alt="Picture of Employee 1" />
+              <h3 class="advantages">Mark Guerrero</h3>
+              <p class="advantages-descrpt">Product Designer</p>
+            </li>
+            <li class="team-members">
+              <img
+                src="./images/img1.jpg"
+                width="264"
+                height="260"
+                alt="Picture of Employee 2" />
+              <h3 class="advantages">Tom Ford</h3>
+              <p class="advantages-descrpt">Frontend Developer</p>
+            </li>
+            <li class="team-members">
+              <img
+                src="./images/img2.jpg"
+                width="264"
+                height="260"
+                alt="Picture of Employee 3" />
+              <h3 class="advantages">Camila Garcia</h3>
+              <p class="advantages-descrpt">Marketing</p>
+            </li>
+            <li class="team-members">
+              <img
+                src="./images/img3.jpg"
+                width="264"
+                height="260"
+                alt="Picture of Employee 4" />
+              <h3 class="advantages">Daniel Wilson</h3>
+              <p class="advantages-descrpt">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="team">Our Portfolio</h2>
-        <ul class="portfolio">
-          <li>
-            <img
-              src="./images/img-portfolio-1.jpg"
-              alt="App picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Banking App</h3>
-            <p class="advantages-descrpt">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-2.jpg"
-              alt="Marketing picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Cashless Payment</h3>
-            <p class="advantages-descrpt">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-3.jpg"
-              alt="App picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Meditation App</h3>
-            <p class="advantages-descrpt">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-4.jpg"
-              alt="Marketing picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Taxi Service</h3>
-            <p class="advantages-descrpt">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-5.jpg"
-              alt="Design picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Screen Illustrations</h3>
-            <p class="advantages-descrpt">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-6.jpg"
-              alt="Marketing picture"
-              width="360"
-              height="300" />
-            <h3 class="advantages">Online Courses</h3>
-            <p class="advantages-descrpt">Marketing</p>
-          </li>
-        </ul>
+      <!-- Portfolio section -->
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="portfolio-header">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/img-portfolio-1.jpg"
+                alt="App picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Banking App</h3>
+              <p class="advantages-descrpt">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio-2.jpg"
+                alt="Marketing picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Cashless Payment</h3>
+              <p class="advantages-descrpt">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio-3.jpg"
+                alt="App picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Meditation App</h3>
+              <p class="advantages-descrpt">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio-4.jpg"
+                alt="Marketing picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Taxi Service</h3>
+              <p class="advantages-descrpt">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio-5.jpg"
+                alt="Design picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Screen Illustrations</h3>
+              <p class="advantages-descrpt">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio-6.jpg"
+                alt="Marketing picture"
+                width="360"
+                height="300" />
+              <h3 class="advantages">Online Courses</h3>
+              <p class="advantages-descrpt">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!-- Footer Section -->
     <footer class="footer">
-      <a href="./index.html" class="company-name"
-        >Web<span class="company-name-part-light">Studio</span></a
-      >
-      <p class="todo">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="company-name"
+          >Web<span class="company-name-part-light">Studio</span></a
+        >
+        <p class="todo">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
