--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
               </p>
             </li>
             <li>
-              <h3 class="advantages">Punctuality</h3>
+              <h3 class="advantages-header">Punctuality</h3>
               <p class="advantages-descrpt">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li>
-              <h3 class="advantages">Diligence</h3>
+              <h3 class="advantages-header">Diligence</h3>
               <p class="advantages-descrpt">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li>
-              <h3 class="advantages">Technologies</h3>
+              <h3 class="advantages-header">Technologies</h3>
               <p class="advantages-descrpt">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
