updated  on 9 dec

--- a/index.html
+++ b/index.html
@@ -62,29 +62,29 @@
           <h2 hidden>Advantages</h2>
           <ul>
             <li>
-              <h3 class="advantages-header">Strategy</h3>
-              <p class="advantages-descrpt">
+              <h3 class="advantages-header-item">Strategy</h3>
+              <p class="section-descrpt">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li>
-              <h3 class="advantages-header">Punctuality</h3>
-              <p class="advantages-descrpt">
+              <h3 class="advantages-header-item">Punctuality</h3>
+              <p class="section-descrpt">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li>
-              <h3 class="advantages-header">Diligence</h3>
-              <p class="advantages-descrpt">
+              <h3 class="advantages-header-item">Diligence</h3>
+              <p class="section-descrpt">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li>
-              <h3 class="advantages-header">Technologies</h3>
-              <p class="advantages-descrpt">
+              <h3 class="advantages-header-item">Technologies</h3>
+              <p class="section-descrpt">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -104,7 +104,7 @@
                 height="260"
                 alt="Picture of Employee 1" />
               <h3 class="advantages">Mark Guerrero</h3>
-              <p class="advantages-descrpt">Product Designer</p>
+              <p class="section-descrpt">Product Designer</p>
             </li>
             <li class="team-members">
               <img
@@ -113,7 +113,7 @@
                 height="260"
                 alt="Picture of Employee 2" />
               <h3 class="advantages">Tom Ford</h3>
-              <p class="advantages-descrpt">Frontend Developer</p>
+              <p class="section-descrpt">Frontend Developer</p>
             </li>
             <li class="team-members">
               <img
@@ -122,7 +122,7 @@
                 height="260"
                 alt="Picture of Employee 3" />
               <h3 class="advantages">Camila Garcia</h3>
-              <p class="advantages-descrpt">Marketing</p>
+              <p class="section-descrpt">Marketing</p>
             </li>
             <li class="team-members">
               <img
@@ -131,7 +131,7 @@
                 height="260"
                 alt="Picture of Employee 4" />
               <h3 class="advantages">Daniel Wilson</h3>
-              <p class="advantages-descrpt">UI Designer</p>
+              <p class="section-descrpt">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -147,8 +147,8 @@
                 alt="App picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Banking App</h3>
-              <p class="advantages-descrpt">App</p>
+              <h3 class="portfolio-header-item">Banking App</h3>
+              <p class="section-descrpt">App</p>
             </li>
             <li>
               <img
@@ -156,8 +156,8 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Cashless Payment</h3>
-              <p class="advantages-descrpt">Marketing</p>
+              <h3 class="portfolio-header-item">Cashless Payment</h3>
+              <p class="section-descrpt">Marketing</p>
             </li>
             <li>
               <img
@@ -165,8 +165,8 @@
                 alt="App picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Meditation App</h3>
-              <p class="advantages-descrpt">App</p>
+              <h3 class="portfolio-header-item">Meditation App</h3>
+              <p class="section-descrpt">App</p>
             </li>
             <li>
               <img
@@ -174,8 +174,8 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Taxi Service</h3>
-              <p class="advantages-descrpt">Marketing</p>
+              <h3 class="portfolio-header-item">Taxi Service</h3>
+              <p class="section-descrpt">Marketing</p>
             </li>
             <li>
               <img
@@ -183,8 +183,8 @@
                 alt="Design picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Screen Illustrations</h3>
-              <p class="advantages-descrpt">Design</p>
+              <h3 class="portfolio-header-item">Screen Illustrations</h3>
+              <p class="section-descrpt">Design</p>
             </li>
             <li>
               <img
@@ -192,8 +192,8 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <h3 class="advantages">Online Courses</h3>
-              <p class="advantages-descrpt">Marketing</p>
+              <h3 class="portfolio-header-item">Online Courses</h3>
+              <p class="section-descrpt">Marketing</p>
             </li>
           </ul>
         </div>
