--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <div class="container">
-        <nav>
+    <header class="header">
+      <div class="header-container container">
+        <nav class="header-nav">
           <a href="./index.html" class="company-name"
             >Web<span class="company-name-part">Studio</span></a
           >
           <ul class="navigation">
             <li><a href="./index.html" class="nav-items">Studio</a></li>
-            <li><a href="" class="nav-items">Portfolio</a></li>
+            <li><a href="#portfolio" class="nav-items">Portfolio</a></li>
             <li><a href="" class="nav-items">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
-          <ul>
+          <ul class="adress-list">
             <li>
               <a href="mailto:info@devstudio.com" class="address-item"
                 >info@devstudio.com</a
@@ -58,9 +58,9 @@
       </section>
       <!-- Advantages section -->
       <section class="advantages section">
-        <div class="container">
+        <div class="advantages container">
           <h2 hidden>Advantages</h2>
-          <ul>
+          <ul class="advantages-list">
             <li>
               <h3 class="advantages-header-item">Strategy</h3>
               <p class="section-descrpt">
@@ -94,17 +94,17 @@
       </section>
       <!-- Team section -->
       <section class="team section">
-        <div class="container">
+        <div class="team container">
           <h2 class="team-header">Our Team</h2>
-          <ul>
+          <ul class="team-list">
             <li class="team-members">
               <img
                 src="./images/img.jpg"
                 width="264"
                 height="260"
                 alt="Picture of Employee 1" />
-              <h3 class="advantages">Mark Guerrero</h3>
-              <p class="section-descrpt">Product Designer</p>
+              <h3 class="team-header-item">Mark Guerrero</h3>
+              <p class="card section-descrpt">Product Designer</p>
             </li>
             <li class="team-members">
               <img
@@ -112,8 +112,8 @@
                 width="264"
                 height="260"
                 alt="Picture of Employee 2" />
-              <h3 class="advantages">Tom Ford</h3>
-              <p class="section-descrpt">Frontend Developer</p>
+              <h3 class="team-header-item">Tom Ford</h3>
+              <p class="card section-descrpt">Frontend Developer</p>
             </li>
             <li class="team-members">
               <img
@@ -121,8 +121,8 @@
                 width="264"
                 height="260"
                 alt="Picture of Employee 3" />
-              <h3 class="advantages">Camila Garcia</h3>
-              <p class="section-descrpt">Marketing</p>
+              <h3 class="team-header-item">Camila Garcia</h3>
+              <p class="card section-descrpt">Marketing</p>
             </li>
             <li class="team-members">
               <img
@@ -130,8 +130,8 @@
                 width="264"
                 height="260"
                 alt="Picture of Employee 4" />
-              <h3 class="advantages">Daniel Wilson</h3>
-              <p class="section-descrpt">UI Designer</p>
+              <h3 class="team-header-item">Daniel Wilson</h3>
+              <p class="card section-descrpt">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -139,61 +139,61 @@
       <!-- Portfolio section -->
       <section class="portfolio section">
         <div class="container">
-          <h2 class="portfolio-header">Our Portfolio</h2>
+          <h2 class="portfolio-header" id="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-1.jpg"
                 alt="App picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Banking App</h3>
-              <p class="section-descrpt">App</p>
+              <p class="card section-descrpt">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-2.jpg"
                 alt="Marketing picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Cashless Payment</h3>
-              <p class="section-descrpt">Marketing</p>
+              <p class="card section-descrpt">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-3.jpg"
                 alt="App picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Meditation App</h3>
-              <p class="section-descrpt">App</p>
+              <p class="card section-descrpt">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-4.jpg"
                 alt="Marketing picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Taxi Service</h3>
-              <p class="section-descrpt">Marketing</p>
+              <p class="card section-descrpt">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-5.jpg"
                 alt="Design picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Screen Illustrations</h3>
-              <p class="section-descrpt">Design</p>
+              <p class="card section-descrpt">Design</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-6.jpg"
                 alt="Marketing picture"
                 width="360"
                 height="300" />
               <h3 class="portfolio-header-item">Online Courses</h3>
-              <p class="section-descrpt">Marketing</p>
+              <p class="card section-descrpt">Marketing</p>
             </li>
           </ul>
         </div>
