--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 alt="App picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Banking App</h3>
                 <p class="card section-descrpt">App</p>
               </div>
@@ -169,7 +169,7 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Cashless Payment</h3>
                 <p class="card section-descrpt">Marketing</p>
               </div>
@@ -180,7 +180,7 @@
                 alt="App picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Meditation App</h3>
                 <p class="card section-descrpt">App</p>
               </div>
@@ -191,7 +191,7 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Taxi Service</h3>
                 <p class="card section-descrpt">Marketing</p>
               </div>
@@ -202,7 +202,7 @@
                 alt="Design picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Screen Illustrations</h3>
                 <p class="card section-descrpt">Design</p>
               </div>
@@ -213,7 +213,7 @@
                 alt="Marketing picture"
                 width="360"
                 height="300" />
-              <div class="card-text">
+              <div class="portfolio card-text">
                 <h3 class="portfolio-header-item">Online Courses</h3>
                 <p class="card section-descrpt">Marketing</p>
               </div>
